welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: ';' expected but 'else' found.
	}else{
         ^